PDF14 device - fix overnight seg faults.

The debug-Z@ overnight test was seg faulting on a few files:

tests_private/comparefiles/Bug691289.pdf
tests_private/comparefiles/Bug692217.pdf
tests_private/comparefiles/Bug692368.pdf

with the psd(cmyk|rgb)tags(16) devices. Some debugging indicates this is
due to various asserts in the compositor which insist that
color_info.num_components and num_planar_planes be the same when
num_planar_planes is not 0.

There seems to be only one place which sets num_components withtout also
setting num_planar_planes, and a quick hack to set them the same (if
num_plana_planes isn't 0) seems to work.